--- a/gradle.properties
+++ b/gradle.properties
@@ -8,7 +8,9 @@ loader_version = 0.14.19
 
 mod_version = 1.0.0
 maven_group = net.krlite
-archives_base_name = modid
+archives_base_name = verticality
 
 # Dependencies
 fabric_version = 0.78.0+1.19.4
+pierced_version = v1.2
+equator_version = v2.2.1
