--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ version = project.mod_version
 group = project.maven_group
 
 repositories {
+	maven { url "https://jitpack.io" }
 }
 
 dependencies {
@@ -15,6 +16,9 @@ dependencies {
 	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
 	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
+
+	implementation "com.github.KrLite:Pierced:${project.pierced_version}"
+	modImplementation include("com.github.KrLite.Equator-v2:Animation:${project.equator_version}")
 }
 
 processResources {
