--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ dependencies {
 	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
-	implementation "com.github.KrLite:Pierced:${project.pierced_version}"
+	implementation include("com.github.KrLite:Pierced:${project.pierced_version}")
 	modImplementation include("com.github.KrLite.Equator-v2:Animation:${project.equator_version}")
 }
 
