--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ dependencies {
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
 	implementation include("com.github.KrLite:Pierced:${project.pierced_version}")
-	modImplementation include("com.github.KrLite.Equator-v2:Animation:${project.equator_version}")
+	modImplementation include("com.github.KrLite.Equator-v2:Animation:${project.minecraft_version}-${project.equator_version}")
 }
 
 processResources {
