--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,7 @@ minecraft_version = 1.20
 yarn_mappings = 1.20+build.1
 loader_version = 0.14.21
 
-mod_version = 1.3.0
+mod_version = 1.4.0
 maven_group = net.krlite
 archives_base_name = verticality
 
@@ -14,3 +14,4 @@ archives_base_name = verticality
 fabric_version = 0.83.0+1.20
 pierced_version = v1.2
 equator_version = v2.5.3
+raised_version = Fabric-1.20.1-2.0.0
