--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ group = project.maven_group
 
 repositories {
 	maven { url "https://jitpack.io" }
-	maven { url 'https://api.modrinth.com/maven' }
+	maven { url "https://api.modrinth.com/maven" }
 }
 
 dependencies {
