--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,7 @@ minecraft_version = 1.19
 yarn_mappings = 1.19+build.4
 loader_version = 0.14.19
 
-mod_version = 1.3.0
+mod_version = 1.4.0
 maven_group = net.krlite
 archives_base_name = verticality
 
@@ -14,3 +14,4 @@ archives_base_name = verticality
 fabric_version = 0.58.0+1.19
 pierced_version = v1.2
 equator_version = v2.5.3
+raised_version = Fabric-1.19.2-2.0.0
