--- a/gradle.properties
+++ b/gradle.properties
@@ -13,5 +13,5 @@ archives_base_name = verticality
 # Dependencies
 fabric_version = 0.83.0+1.20
 pierced_version = v1.2
-equator_version = v2.6.0
+equator_version = 2.6.0
 raised_version = Fabric-1.20.1-2.0.0
