--- a/gradle.properties
+++ b/gradle.properties
@@ -15,3 +15,5 @@ fabric_version = 0.90.4+1.20.2
 pierced_version = v1.2
 equator_version = 2.6.0
 raised_version = Fabric-1.20.2-3.1.0
+appleskin_version = 2.5.1+mc1.20.2
+modmenu_version = 8.0.0
