--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,8 @@ group = project.maven_group
 repositories {
 	maven { url "https://jitpack.io" }
 	maven { url "https://api.modrinth.com/maven" }
+	maven { url "https://maven.shedaniel.me/" }
+	maven { url "https://maven.terraformersmc.com/releases/" }
 }
 
 dependencies {
@@ -22,11 +24,16 @@ dependencies {
 	modImplementation include("com.github.KrLite.Equator-v2:Animation:${project.equator_version}-mc1.20")
 
 	modCompileOnly "maven.modrinth:raised:${project.raised_version}"
-	modRuntimeOnly "maven.modrinth:appleskin:${project.appleskin_version}"
+	modCompileOnly "maven.modrinth:appleskin:${project.appleskin_version}"
+	modCompileOnly("me.shedaniel.cloth:cloth-config-fabric:${project.cloth_config_version}") {
+		exclude(group: "net.fabricmc.fabric-api")
+	}
 
 	modRuntimeOnly "maven.modrinth:raised:${project.raised_version}"
-	modCompileOnly "maven.modrinth:appleskin:${project.appleskin_version}"
-	modRuntimeOnly "maven.modrinth:modmenu:${project.modmenu_version}"
+	modRuntimeOnly "maven.modrinth:appleskin:${project.appleskin_version}"
+	modRuntimeOnly("me.shedaniel.cloth:cloth-config-fabric:${project.cloth_config_version}") {
+		exclude(group: "net.fabricmc.fabric-api")
+	}
 }
 
 processResources {
