--- a/gradle.properties
+++ b/gradle.properties
@@ -15,3 +15,5 @@ fabric_version = 0.83.0+1.20
 pierced_version = v1.2
 equator_version = 2.6.0
 raised_version = Fabric-1.20.1-3.1.0
+appleskin_version = xcauwnEB
+cloth_config_version = 12.0.109
