--- a/gradle.properties
+++ b/gradle.properties
@@ -17,4 +17,4 @@ equator_version = 2.6.0
 raised_version = Fabric-1.20.2-3.1.0
 appleskin_version = JNKPokGG
 cloth_config_version = 12.0.109
-modmenu_version = 7.0.1
+modmenu_version = 8.0.0-beta.2
