--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ org.gradle.parallel = true
 # https://fabricmc.net/develop
 minecraft_version = 1.20.2
 yarn_mappings = 1.20.2+build.4
-loader_version = 0.14.24
+loader_version = 0.15.3
 
 mod_version = 3.0.0
 maven_group = net.krlite
@@ -14,7 +14,8 @@ archives_base_name = verticality
 fabric_version = 0.90.4+1.20.2
 pierced_version = v1.2
 equator_version = 2.6.0
-raised_version = Fabric-1.20.2-3.1.0
-appleskin_version = JNKPokGG
 cloth_config_version = 12.0.109
 modmenu_version = 8.0.0-beta.2
+raised_version = Fabric-1.20.2-3.1.0
+appleskin_version = JNKPokGG
+immediatelyfast_version = 1.2.8+1.20.4-fabric
