--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,13 +1,15 @@
 [versions]
-maven-group = "net.krlite"
+maven-group = "band.kessokuteatime"
 archives-name = "verticality"
-mod = "4.0.3"
+mod = "4.1.0"
+loader = "fabric"
 
 minecraft = "1.20.2"
 yarn = "1.20.2+build.4"
-fabric-loader = "0.15.7"
+fabric-loader = "0.15.10"
 fabric-api = "0.91.3+1.20.2"
-fabric-loom = "1.5-SNAPSHOT"
+fabric-loom = "1.6-SNAPSHOT"
+modpublisher = "2.1.0"
 
 cloth-config = "12.0.109"
 modmenu = "8.0.0-beta.2"
@@ -16,6 +18,15 @@ equator = "2.6.4-mc1.20"
 raised = "Fabric-1.20.2-3.1.0"
 appleskin = "JNKPokGG"
 immediatelyfast = "1.2.10+1.20.4-fabric"
+
+# id
+id-modrinth = "id"
+id-curseforge = "id"
+
+# display
+display-name = "Verticality"
+display-loader = "Fabric"
+display-version = "1.20.2+"
 
 [libraries]
 minecraft = { group = "com.mojang", name = "minecraft", version.ref = "minecraft" }
@@ -36,6 +47,7 @@ immediatelyfast = { group = "maven.modrinth", name = "immediatelyfast", version.
 
 [plugins]
 fabric-loom = { id = "fabric-loom", version.ref = "fabric-loom" }
+modpublisher = { id = "com.hypherionmc.modutils.modpublisher", version.ref = "modpublisher" }
 
 [bundles]
 fabric = ["fabric-loader", "fabric-api"]
