--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -20,8 +20,8 @@ appleskin = "JNKPokGG"
 immediatelyfast = "1.2.10+1.20.4-fabric"
 
 # id
-id-modrinth = "id"
-id-curseforge = "id"
+id-modrinth = "6wqzLv3V"
+id-curseforge = "998422"
 
 # display
 display-name = "Verticality"
