--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,19 +4,19 @@ archives-name = "verticality"
 mod = "4.1.2"
 loader = "fabric"
 
-minecraft = "1.20.2"
-yarn = "1.20.2+build.4"
+minecraft = "1.20"
+yarn = "1.20+build.1"
 fabric-loader = "0.15.10"
-fabric-api = "0.91.3+1.20.2"
+fabric-api = "0.83.0+1.20"
 fabric-loom = "1.6-SNAPSHOT"
 modpublisher = "2.1.0"
 
-cloth-config = "12.0.109"
-modmenu = "8.0.0-beta.2"
+cloth-config = "11.1.118"
+modmenu = "7.2.2"
 equator = "2.6.4-mc1.20"
 
-raised = "Fabric-1.20.2-3.1.0"
-appleskin = "JNKPokGG"
+raised = "Fabric-1.20.2-3.1.3"
+appleskin = "xcauwnEB" # 2.5.1+mc1.20
 immediatelyfast = "1.2.10+1.20.4-fabric"
 
 # id
@@ -26,7 +26,7 @@ id-curseforge = "998422"
 # display
 display-name = "Verticality"
 display-loader = "Fabric"
-display-version = "1.20.2+"
+display-version = "1.20~1.20.1"
 
 [libraries]
 minecraft = { group = "com.mojang", name = "minecraft", version.ref = "minecraft" }
