--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -15,8 +15,8 @@ cloth-config = "12.0.109"
 modmenu = "8.0.0-beta.2"
 equator = "2.6.4-mc1.20"
 
-raised = "Fabric-1.20.2-3.1.0"
-appleskin = "JNKPokGG"
+raised = "Fabric-1.20.2-3.1.3"
+appleskin = "JNKPokGG" # 2.5.1+mc1.20.2
 immediatelyfast = "1.2.10+1.20.4-fabric"
 
 # id
